--- a/style.css
+++ b/style.css
@@ -1,127 +1,56 @@
 * {
-    /* border:  1px solid black; */
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.header {
+    padding: 20px;
+    line-height: 27px;
 }
 
-.nav-left, .nav-right {
-    display: inline-block;
-    margin-top: 1.5rem;
-}
-.nav-left {
+.header__left {
     float: left;
-    position: absolute;
-    top: 0.1rem;
-    left: 2rem;
 }
-.nav-right {
+.header__right {
     float: right;
-    position: absolute;
-    top: 0.1rem;
-    right: 2rem;
 }
 
-#head {
-    text-align: center;
+.header__item {
+    display: inline-block;    /*!list-style-type: none; */ 
 }
-
-#head a {
-text-decoration: none;
-color: black;
-font-size: 13px;
-line-height: 36px;
-padding: 8px;
-cursor: pointer;
+.header__link {
+    color: black;
+    padding: 0.5rem;
+    opacity: .7;
 }
-
-#head a:hover {
+.header__link:hover {
     text-decoration: underline;
-
 }
-.menu-icon {
-    display: inline-block;
-}
-.menu-icon img {
+.header__link--appicon {
     vertical-align: middle;
-    height: 30px;
-    width: 30px;
-    overflow: clip;
-    cursor: pointer;
-    opacity: .5;
+    opacity: .7;
 }
 
-.menu-icon img:hover {
+.header__link--appicon:hover {
     opacity: 1;
 }
-.header-right-button {
-    display: inline-block;
-    height: 30px;
+.header__link--button {
     width: 70px;
+    height: 30px;
+    background-color: #498af4;
     border-radius: 4px;
-    cursor:pointer;
-    font-weight: 600;
-    text-align: center;
-    background-color: #4285f4;
     color: white;
     border: none;
-    text-decoration: none;
-
-}
-#center {
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-    /* vertical-align: middle; */
-    margin-top: 200px;
-
-}
-#main-logo > article {
-    margin: auto;
-}
-#logo {
-    height: 95px;
-    width: 272px;
+    cursor: pointer;
+    font-weight: 600;
 }
 
-}
-.search-icon {
-    text-align: center;
-    vertical-align: middle;
-    display: inline;
-}
-.search-icon img{
-    height: 30px;
-    width: 30px;
-    overflow: clip;
-    margin-left: 5px;
-    display: inline-block;
-}
-
-#main-search-bar {
-    height: 38px;
-    width: 460px;
-    border: 1px solid #d3d3d3;
-    margin: 20px 227px;
-    padding-top: 3px;
-    box-shadow: rgb(211, 211, 211,)3px 3px 5px 0px;
-    border-radius: 25px;
-}
-.input-bar > input {
-    font-size: 14px;
-    text-decoration: none;
-    height: 25px;
-    width: 350px;
-    display: inline-block;
-    cursor: text;
-}
-
-#search-icon {
-    
+.header__link--button:hover {
+    background-color: rgba(76, 0, 130, 0.712);
 }
