--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@
   .header__item {
     display: inline;
   }
-  .header__link not:last-child {
+  .header__link {
     color: black;
     padding: 0.5rem;
-    opacity: 0.7;
+    opacity: 0.9;
   }
   .header__link:hover {
     text-decoration: underline;
